fix(ui): mobile-sheet-bar-container has scrollbar

--- a/packages/sheets-ui/src/views/mobile/sheet-bar/index.module.less
+++ b/packages/sheets-ui/src/views/mobile/sheet-bar/index.module.less
@@ -1,7 +1,6 @@
 .mobile-sheet-bar {
     &-container {
         width: 100%;
-        overflow-x: scroll;
         height: 32px;
         background-color: rgb(var(--bg-color));
     }
